<?xml version="1.0"?>
<package>
  <name>tennis_planning</name>
  <version>0.0.0</version>
  <description>Software of JSK lab for tennis planning</description>

  <maintainer email="shifan@jsk.imi.i.u-tokyo.ac.jp">Fan Shi</maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>

  <run_depend>tennis_hybrid_plannar</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
